# knowledge-tree

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLA-CORPORATE.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLUGINS.md  QUICKSTART.md  README.md  STACK.md  config.yaml  docker-compose.quickstart.yml  docker-compose.yml  justfile  lefthook.yml  pyproject.toml  pyrightconfig.json
libs/kt-agents-core/: pyproject.toml
libs/kt-agents-core/src/kt_agents_core/: __init__.py  base.py  results.py  state.py  synthesis.py  worker_base.py
libs/kt-agents-core/tests/: test_context_wiring.py
libs/kt-auth/: pyproject.toml
libs/kt-auth/src/kt_auth/: __init__.py  tokens.py
libs/kt-auth/tests/: test_token_crypto.py
libs/kt-config/: pyproject.toml
libs/kt-config/src/kt_config/: __init__.py  cache.py  errors.py  graph_config.py  plugin.py  settings.py  testing.py  types.py
libs/kt-config/tests/: test_encryption_settings.py  test_graph_config_resolver.py  test_graph_databases.py  test_graph_type_plugin.py  test_plugin.py  test_sanity.py  test_testing_fixtures.py  test_types.py  test_yaml_settings.py
libs/kt-core-engine-api/: pyproject.toml
libs/kt-core-engine-api/src/kt_core_engine_api/: __init__.py  services.py
libs/kt-core-engine-api/tests/: test_extractor_abc.py  test_search_abc.py  test_validation.py
libs/kt-db/: alembic.ini  alembic_write.ini  pyproject.toml
libs/kt-db/alembic/: env.py
libs/kt-db/alembic/versions/: 14c8ed3f9b77_merge_heads.py  1b47bc13d4f5_merge_page_fetch_log_and_drop_embedding_.py  212efc51d897_drop_convergence_reports_and_divergent_.py  3256dd2096fd_initial_schema.py  (+77 more)
libs/kt-db/alembic_write/: env.py
libs/kt-db/tests/: conftest.py  test_alembic_env_url_escape.py  test_encrypted_type.py  test_graph_models.py  test_graph_sessions_search_path.py  test_keys.py  test_page_fetch_log.py  test_read_only_gate.py  test_ssl_connect_args.py  test_trigram_dedup.py  test_write_dimensions.py  test_write_seeds.py
libs/kt-facts/: pyproject.toml
libs/kt-facts/tests/: conftest.py  seed_fixtures.py  test_author.py  test_cleanup.py  test_constraints.py  test_dedup.py  test_entity_extraction.py  test_entity_name_validation.py  test_examples.py  test_extractors.py  test_fact_types.py  test_file_processing.py  test_merge.py  test_prompt_builder.py  test_seed_dedup.py  test_seed_disambiguation.py  test_seed_extraction.py  test_seed_routing.py  test_segmenter.py  test_tiered_dedup_experiment.py
libs/kt-flags/: pyproject.toml
libs/kt-flags/tests/: test_context.py  test_fastapi_middleware.py  test_registry.py  test_settings_provider.py  test_testing_fixture.py
libs/kt-graph/: pyproject.toml
libs/kt-graph/tests/: conftest.py  test_convergence.py  test_public_bridge.py  test_qdrant_fact_linking.py  test_splitting.py  test_write_node_conversion.py
libs/kt-hatchet/: pyproject.toml
libs/kt-hatchet/tests/: test_inject_graph_id.py  test_keys.py  test_progress.py  test_tracked_task.py  test_usage_helpers.py
libs/kt-models/: pyproject.toml
libs/kt-models/tests/: conftest.py  test_dimension_batching.py  test_dimensions.py  test_expense.py  test_gateway.py  test_link_normalizer.py  test_usage.py  test_usage_sink.py
libs/kt-ontology/: pyproject.toml
libs/kt-ontology/tests/: test_ancestry_merge.py  test_crystallization.py  test_ontology_cache.py  test_wikidata_provider.py
libs/kt-plugins/: pyproject.toml
libs/kt-plugins/tests/: conftest.py  test_discovery.py  test_extension_registry.py  test_hooks.py  test_license.py  test_manager.py
libs/kt-providers/: pyproject.toml
libs/kt-providers/tests/: conftest.py  test_email_base.py  test_email_factory.py  test_email_resend.py  test_fetcher.py  test_providers.py  test_search_and_fetch.py
libs/kt-qdrant/: pyproject.toml
libs/kt-qdrant/tests/: test_client.py  test_fact_repository.py  test_node_repository.py
libs/kt-rbac/: pyproject.toml
libs/kt-rbac/tests/: test_checker.py  test_policies.py  test_source_access.py  test_types.py
plugins/backend-engine-concept-extractor/: alembic_hybrid.ini  pyproject.toml
plugins/backend-engine-concept-extractor/alembic_hybrid/: env.py
plugins/backend-engine-concept-extractor/tests/: conftest.py  test_hybrid_extractor.py  test_llm_extractor.py  test_settings.py  test_spacy_extractor.py
plugins/backend-engine-hybrid-extractor/: pyproject.toml
plugins/backend-engine-hybrid-extractor/alembic_hybrid/: env.py
plugins/backend-engine-hybrid-extractor/tests/: conftest.py  test_hybrid_extractor.py
plugins/backend-engine-search-providers/: LICENSE  pyproject.toml
plugins/backend-engine-search-providers/tests/: conftest.py  test_brave.py  test_openalex.py  test_plugin.py  test_serper.py  test_settings.py
services/api/: Dockerfile  pyproject.toml
services/api/tests/: conftest.py  test_auth_verification.py  test_dispatch.py  test_email_templates.py  test_flag_integration.py  test_graph_schemas.py  test_graph_types_router.py  test_provision_graph_routing.py  test_schemas.py
services/mcp/: Dockerfile  README.md  pyproject.toml
services/mcp/tests/: conftest.py  test_auth.py  test_oauth.py  test_tools.py
services/worker-all/: pyproject.toml
services/worker-ingest/: Dockerfile  pyproject.toml
services/worker-ingest/tests/: test_orphan_fact_sweeper.py  test_public_cache_helpers.py  test_public_cache_sweeper.py
services/worker-nodes/: Dockerfile  pyproject.toml
services/worker-nodes/tests/: conftest.py  test_author_entities.py  test_definition_pipeline.py  test_dimension_batching.py  test_fact_rejection.py  test_gathering_extraction.py  test_merge_absorption.py  test_node_tools.py  test_parent_pipeline.py  test_pipeline.py  test_seed_edge_strategy.py  test_seed_promotion.py
services/worker-query/: Dockerfile  pyproject.toml
services/worker-query/tests/: test_query_agent.py
services/worker-search/: Dockerfile  pyproject.toml
services/worker-search/tests/: test_seed_dedup_task.py
services/worker-sync/: Dockerfile  pyproject.toml
services/worker-sync/tests/: conftest.py  test_dedup_workflow.py  test_sync_imports.py  test_sync_resilience.py
(+869 files in other folders)
