[project]
name = "knowledge-tree-workspace"
version = "0.1.0"
description = "Knowledge Tree monorepo workspace"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["libs/*", "services/*"]

[tool.uv]
dev-dependencies = [
    "factory-boy>=3.3.3",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "respx>=0.22.0",
    "ruff>=0.15.1",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["libs/*/src", "services/*/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "--dist loadfile -m 'not relation_agent'"
markers = [
    "relation_agent: integration tests hitting real LLM APIs (deselected by default)",
]
