[project]
name = "knowledge-tree-workspace"
version = "0.44.0"
description = "Knowledge Tree monorepo workspace"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["libs/*", "services/*"]

[tool.uv]
dev-dependencies = [
    "factory-boy>=3.3.3",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "respx>=0.22.0",
    "ruff>=0.15.1",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): v{version}"
tag_format = "v{version}"
major_on_zero = false
allow_zero_version = true
build_command = "sed -i \"s/^version: .*/version: ${NEW_VERSION}/;s/^appVersion: .*/appVersion: \\\"${NEW_VERSION}\\\"/\" helm/knowledge-tree/Chart.yaml && git add helm/knowledge-tree/Chart.yaml"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["libs/*/src", "services/*/src"]
extend-exclude = ["experiments"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "N806",   # variable in function should be lowercase — used for mock/class aliases
    "N814",   # camelCase imported as constant
    "N817",   # camelCase imported as acronym
    "E402",   # module level import not at top — used for lazy imports
    "E741",   # ambiguous variable name
    "E501",   # line too long — prompt templates and format strings
    "E731",   # lambda assignment
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F841"]
"**/tests/**" = ["F841"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "--dist loadfile -m 'not relation_agent'"
markers = [
    "relation_agent: integration tests hitting real LLM APIs (deselected by default)",
]
