[project]
name = "kt-agents-core"
version = "0.1.0"
description = "Knowledge Tree base agent classes, shared state, and results"
requires-python = ">=3.12"
dependencies = [
    "kt-graph",
    "kt-models",
    "kt-providers",
    "kt-config",
    "langchain-core>=0.3.0",
    "langgraph>=1.0.8",
    "langchain-openai>=1.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kt-graph = { workspace = true }
kt-models = { workspace = true }
kt-providers = { workspace = true }
kt-config = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/kt_agents_core"]
