[project]
name = "kt-config"
version = "0.1.0"
description = "Knowledge Tree configuration, types, and errors"
requires-python = ">=3.12"
dependencies = [
    "kt-core-engine-api",
    "kt-plugins",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kt-core-engine-api = { workspace = true }
kt-plugins = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/kt_config"]
