[project]
name = "kt-db"
version = "0.1.0"
description = "Knowledge Tree database models, repositories, and migrations"
requires-python = ">=3.12"
dependencies = [
    "kt-config",
    "sqlalchemy>=2.0.46",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "fastapi-users[sqlalchemy]>=15.0.4",
    "cryptography>=46.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kt-config = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/kt_db"]
