[project]
name = "kt-facts"
version = "0.1.0"
description = "Knowledge Tree fact decomposition pipeline"
requires-python = ">=3.12"
dependencies = [
    "kt-db",
    "kt-models",
    "metaphone>=0.6",
    "numpy>=2.4.2",
    "scipy>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kt-db = { workspace = true }
kt-models = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/kt_facts"]
