[project]
name = "kt-facts"
version = "0.1.0"
description = "Knowledge Tree fact decomposition pipeline"
requires-python = ">=3.12"
dependencies = [
    "kt-db",
    "kt-core-engine-api",
    "kt-models",
    "kt-providers",
    "kt-qdrant",
    "metaphone>=0.6",
    "numpy>=2.4.2",
    "scipy>=1.17.1",
    "spacy>=3.8.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kt-db = { workspace = true }
kt-core-engine-api = { workspace = true }
kt-models = { workspace = true }
kt-providers = { workspace = true }
kt-qdrant = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/kt_facts"]

[dependency-groups]
dev = []
