[project]
name = "kt-graph"
version = "0.1.0"
description = "Knowledge Tree graph engine and convergence"
requires-python = ">=3.12"
dependencies = [
    "kt-db",
    "kt-models",
    "kt-qdrant",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kt-db = { workspace = true }
kt-models = { workspace = true }
kt-qdrant = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/kt_graph"]
