[project]
name = "kt-hatchet"
version = "0.1.0"
description = "Knowledge Tree Hatchet client, lifespan, models, and pipeline helpers"
requires-python = ">=3.12"
dependencies = [
    "kt-db",
    "kt-models",
    "kt-providers",
    "kt-ontology",
    "kt-config",
    "kt-qdrant",
    "hatchet-sdk>=1.26.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kt-db = { workspace = true }
kt-models = { workspace = true }
kt-providers = { workspace = true }
kt-ontology = { workspace = true }
kt-config = { workspace = true }
kt-qdrant = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/kt_hatchet"]
