[project]
name = "kt-hatchet"
version = "0.1.0"
description = "Knowledge Tree Hatchet client, lifespan, models, and pipeline helpers"
requires-python = ">=3.12"
dependencies = [
    "kt-db",
    "kt-models",
    "kt-providers",
    "kt-config",
    "kt-qdrant",
    "kt-graph",
    "kt-agents-core",
    "cryptography>=43.0.0",
    "hatchet-sdk>=1.26.0",
    "python-dotenv>=1.0.0",
    "langchain-core>=0.3.0",
    "langgraph>=1.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kt-db = { workspace = true }
kt-models = { workspace = true }
kt-providers = { workspace = true }
kt-config = { workspace = true }
kt-qdrant = { workspace = true }
kt-graph = { workspace = true }
kt-agents-core = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/kt_hatchet"]
