[project]
name = "kt-ontology"
version = "0.1.0"
description = "Knowledge Tree ontology system (Wikidata, ancestry, cache)"
requires-python = ">=3.12"
dependencies = [
    "kt-db",
    "kt-config",
    "kt-graph",
    "kt-models",
    "httpx>=0.28.1",
    "redis>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kt-db = { workspace = true }
kt-config = { workspace = true }
kt-graph = { workspace = true }
kt-models = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/kt_ontology"]
