[project]
name = "kt-plugins"
version = "0.1.0"
description = "Knowledge Tree plugin system — discovery, lifecycle, hooks, and extension points"
requires-python = ">=3.12"
dependencies = [
    "kt-config",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kt-config = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/kt_plugins"]
