[project]
name = "kt-providers"
version = "0.1.0"
description = "Knowledge Tree search providers and content fetcher"
requires-python = ">=3.12"
dependencies = [
    "kt-config",
    "kt-agents-core",
    "httpx>=0.28.1",
    "trafilatura>=2.0.0",
    "pydantic>=2.12.5",
    "structlog>=25.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kt-config = { workspace = true }
kt-agents-core = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/kt_providers"]

[dependency-groups]
dev = [
    "respx>=0.22.0",
]
