[project]
name = "kt-qdrant"
version = "0.1.0"
description = "Knowledge Tree Qdrant vector database integration"
requires-python = ">=3.12"
dependencies = [
    "kt-config",
    "qdrant-client>=1.13.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kt-config = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/kt_qdrant"]
