[project]
name = "kt-rbac"
version = "0.1.0"
description = "Knowledge Tree RBAC - roles, permissions, and policy evaluation"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/kt_rbac"]
