[project]
name = "kt-api"
version = "0.1.0"
description = "Knowledge Tree FastAPI service"
requires-python = ">=3.12"
dependencies = [
    "kt-db",
    "kt-config",
    "kt-hatchet",
    "kt-graph",
    "kt-models",
    "kt-providers",
    "kt-facts",
    "kt-agents-core",
    "kt-worker-ingest",
    "kt-worker-synthesis",
    "kt-worker-nodes",
    "fastapi>=0.129.0",
    "uvicorn>=0.40.0",
    "sse-starlette>=3.3.2",
    "fastapi-users[sqlalchemy]>=15.0.4",
    "httpx-oauth>=0.16.1",
    "python-multipart>=0.0.22",
    "structlog>=25.5.0",
    "cryptography>=46.0.5",
    "kt-auth",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kt-db = { workspace = true }
kt-config = { workspace = true }
kt-hatchet = { workspace = true }
kt-graph = { workspace = true }
kt-models = { workspace = true }
kt-providers = { workspace = true }
kt-facts = { workspace = true }
kt-agents-core = { workspace = true }
kt-worker-ingest = { workspace = true }
kt-worker-synthesis = { workspace = true }
kt-worker-nodes = { workspace = true }
kt-auth = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/kt_api"]
