[project]
name = "kt-mcp"
version = "0.1.0"
description = "Knowledge Tree MCP server — read-only graph access via Model Context Protocol"
requires-python = ">=3.12"
dependencies = [
    "kt-db",
    "kt-config",
    "kt-graph",
    "kt-qdrant",
    "fastmcp>=3.0",
    "fastapi>=0.129.0",
    "uvicorn>=0.40.0",
    "kt-auth",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "kt-models",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kt-db = { workspace = true }
kt-config = { workspace = true }
kt-graph = { workspace = true }
kt-qdrant = { workspace = true }
kt-auth = { workspace = true }
kt-models = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/kt_mcp"]
