[project]
name = "kt-worker-all"
version = "0.1.0"
description = "Knowledge Tree all-in-one worker (dev mode)"
requires-python = ">=3.12"
dependencies = [
    "kt-hatchet",
    "kt-plugins",
    "kt-worker-bottomup",
    "kt-worker-search",
    "kt-worker-nodes",
    "kt-worker-ingest",
    "kt-worker-sync",
    "kt-worker-synthesis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kt-hatchet = { workspace = true }
kt-plugins = { workspace = true }
kt-worker-bottomup = { workspace = true }
kt-worker-search = { workspace = true }
kt-worker-nodes = { workspace = true }
kt-worker-ingest = { workspace = true }
kt-worker-sync = { workspace = true }
kt-worker-synthesis = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/kt_worker_all"]
