[project]
name = "kt-worker-nodes"
version = "0.1.0"
description = "Knowledge Tree node building worker"
requires-python = ">=3.12"
dependencies = [
    "kt-hatchet",
    "kt-agents-core",
    "kt-db",
    "kt-models",
    "kt-providers",
    "kt-graph",
    "kt-facts",
    "kt-ontology",
    "kt-config",
    "kt-worker-bottomup",
    "langchain-core>=0.3.0",
    "langgraph>=1.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kt-hatchet = { workspace = true }
kt-agents-core = { workspace = true }
kt-db = { workspace = true }
kt-models = { workspace = true }
kt-providers = { workspace = true }
kt-graph = { workspace = true }
kt-facts = { workspace = true }
kt-ontology = { workspace = true }
kt-config = { workspace = true }
kt-worker-bottomup = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/kt_worker_nodes"]
