[project]
name = "kt-worker-search"
version = "0.1.0"
description = "Knowledge Tree search worker"
requires-python = ">=3.12"
dependencies = [
    "kt-hatchet",
    "kt-db",
    "kt-models",
    "kt-providers",
    "kt-facts",
    "kt-config",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kt-hatchet = { workspace = true }
kt-db = { workspace = true }
kt-models = { workspace = true }
kt-providers = { workspace = true }
kt-facts = { workspace = true }
kt-config = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/kt_worker_search"]
