[project]
name = "kt-worker-sync"
version = "0.1.0"
description = "Knowledge Tree sync worker (write-db → graph-db)"
requires-python = ">=3.12"
dependencies = [
    "kt-hatchet",
    "kt-db",
    "kt-models",
    "kt-config",
    "kt-qdrant",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kt-hatchet = { workspace = true }
kt-db = { workspace = true }
kt-models = { workspace = true }
kt-config = { workspace = true }
kt-qdrant = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/kt_worker_sync"]
